testsuite/escript/errors/errors009-int-out-of-range.err1
Function force_compile_error() is not defined.